DOC-1913: 6.3.2-release-notes.adoc
Typo correction: s/updates include/update includes/.

--- a/modules/ROOT/pages/6.3.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.3.2-release-notes.adoc
@@ -87,7 +87,7 @@ All 3 server-side components have been updated to include dependency updates add
 * https://nvd.nist.gov/vuln/detail/CVE-2023-22465[CVE-2022-41881]
 
 
-This updates include both Medium and High severity vulnerability fixes.
+This update includes both Medium and High severity vulnerability fixes.
 
 For information on the server-side components updates, see: xref:#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes].
 
