--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -27,6 +27,18 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 === Advanced Template 1.0.0
 
+// https://ephocks.atlassian.net/browse/TINY-9532
+// Supported documenation chapter to go into docs suite https://ephocks.atlassian.net/browse/DOC-1912
+// @bforte this is a placeholder only, looks like this ticket is new feature to Advanced Templates specifically.
+//1. Cause - What actions or circumstances cause this bug to present.
+
+//2. Consequence - What happens when the bug presents.
+
+//3. Fix - What was done to fix the bug.
+
+//4. Result - What now happens when the actions or circumstances above occur.
+
+// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
 [[accompanying-premium-plugin-changes]]
@@ -250,6 +262,22 @@ To quote my [comment, left on the TinyMCE 6.4 BoM][11] in Notion
 For information on the **Spell Checker Pro** plugin, see: xref:introduction-to-tiny-spellchecker.adoc[INtroduction to Spell Checker Pro].
 
 
+=== Advanced Code Editor 3.2.0
+// bforte this is related to https://ephocks.atlassian.net/browse/DOC-1907
+////
+To quote my [comment, left on the TinyMCE 6.4 BoM][11] in Notion
+
+> What changes were made to the Advanced Code Premium plugin? The
+> [changelog][12] contains the below:
+> New button to copy the current dialog content. #TINY-9525
+> New buttons to increase and decrease the font size in the dialog. #TINY-9526
+> New button to toggle dark mode. #TINY-9527
+> New button to toggle fullscreen. #TINY-9529
+
+[14]: <https://github.com/tinymce/advcode/blob/main/CHANGELOG.md>
+
+[15]: <https://github.com/tinymce/advcode/commits/main>
+////
 
 [[accompanying-premium-skins-and-icon-packs-changes]]
 == Accompanying Premium Skins and Icon Packs changes
@@ -310,6 +338,7 @@ In {productname} 6.4, the `renderUI` property in the Theme type, now returns a `
 === New isEditable API to editor.selection that returns true or false if the current selection is editable
 
 // https://ephocks.atlassian.net/browse/TINY-9462
+// bforte this seems to be connected to https://ephocks.atlassian.net/browse/DOC-1888
 In previous versions of {productname}, elements that where within the `editor.selection` could be modified, if they sat within a HTML document body with the properties set to `editor.getBody().contentEditable = false`.
 
 As a consequence, any `selection | node`, that was encapsulate within the editor body, could be affected by this such as:
@@ -348,7 +377,7 @@ As a result, any elements that return a `true` value when a specified element is
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 === New setText and setIcon methods added to menu button and toolbar button apis
-
+// bforte this is related to https://ephocks.atlassian.net/browse/DOC-1900
 // https://ephocks.atlassian.net/browse/TINY-9268
 Previous versions of {productname}, the menu button APIs did not behave as expected with the parent `icon` or `text` selection. As a consequence, the menu button API, would not extend or update the parent `icon` or `text` directly, based upon what `icon` or `text` the user had selected within the menubar.
 
@@ -360,7 +389,7 @@ In {productname} 6.4, two new additions were added to the menu button API.
 As a result, in {productname} 6.4, menu items can chance based on the parent menu button `api` properties.
 
 === New highlight_on_focus option which enables highlighting the content area on focus
-
+// bforte this is related to https://ephocks.atlassian.net/browse/DOC-1893
 // https://ephocks.atlassian.net/browse/TINY-9277
 In previous versions of {productname}, when using `devtools` such as `Chrome devTools`, the editor content area would not render the `focus` border when the editor was `infocus`.
 
@@ -373,7 +402,7 @@ In {productname} 6.4, the editor now renders the highlighted border when in `foc
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 === New fontsizeinput toolbar item which allows the user to set the size via input and also increase and decrease it with + and - buttons
-// @bforte waiting on QA Verified before drafting.
+// @bforte this is related to https://ephocks.atlassian.net/browse/DOC-1892
 // https://ephocks.atlassian.net/browse/TINY-9429
 //1. Cause - What actions or circumstances cause this bug to present.
 
@@ -422,6 +451,19 @@ The consequence of the previous UX, meant that adjustments needed to be made to 
 To fix this accessibility issue, {productname} 6.4, increased the contrast ratio to `3:1` to each line divider, and changed the `line` color to `#646D78` to further help define were the separations occur in the table.
 
 As a result, the `help menu` is now styled to support a wider range of users, by these new changes implemented.
+
+=== Provide configuration to turn DomPurify off
+// @bforte this is a placeholder
+// https://ephocks.atlassian.net/browse/TINY-9600
+//1. Cause - What actions or circumstances cause this bug to present.
+
+//2. Consequence - What happens when the bug presents.
+
+//3. Fix - What was done to fix the bug.
+
+//4. Result - What now happens when the actions or circumstances above occur.
+
+// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
 [[bug-fixes]]
