--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -391,6 +391,11 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
+*** TinyMCE 6.3.2
+**** xref:6.3.2-release-notes.adoc#overview[Overview]
+**** xref:6.3.2-release-notes.adoc:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
+**** xref:6.3.2-release-notes.adoc#bug-fix[Bug fix]
+**** xref:6.3.2-release-notes.adoc:security-fixes[Security fixes]
 *** TinyMCE 6.3
 **** xref:6.3-release-notes.adoc#overview[Overview]
 **** xref:6.3-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
