--- a/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
+++ b/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
@@ -64,5 +64,4 @@ tinymce.init({
 });
 ----
 
-WARNING: Turning `DomPurify` off leaves {productname}, and any application using {productname}, extremely vulnerable to XSS attacks. Only turn `DomPurify` off if alternative and equivalently capable HTML and XML sanitization and XSS protections are in place.
-
+WARNING: Turning DomPurify off leaves {productname}, and any application using {productname}, extremely vulnerable to XSS attacks. Only turn DomPurify off if alternative and equivalently capable HTML and XML sanitization and XSS protections are in place.
