DOC-1892: core-toolbar-buttons.adoc
Added further detail re not using `fontsize` and `fontsizeinput` in the same toolbar or toolbar group.

--- a/modules/ROOT/partials/toolbar-button-ids/core-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/core-toolbar-buttons.adoc
@@ -14,9 +14,8 @@
 |`+cut+` |Cuts the current selection into clipboard.
 |`+fontfamily+` |Dropdown list with font families to apply to selection.
 |`+fontsize+` |Dropdown list with font sizes to apply to selection. +
-The `+fontsize+` and `+fontsizeinput+` toolbar buttons should not be used together.
-|`+fontsizeinput+` |Text entry input field to change font size of selection or current insertion point. Also provides increase and decrease font size buttons on either side of said input field. +
-The `+fontsize+` and `+fontsizeinput+` toolbar buttons should not be used together.
+The `+fontsize+` and `+fontsizeinput+` toolbar buttons should not be placed in a xref:toolbar-configuration-options.adoc#toolbar_groups[toolbar group] together or otherwise presented together.
+|`+fontsizeinput+` |Text entry input field to change font size of selection or current insertion point. Also provides increase and decrease font size buttons on either side of said input field.The `+fontsize+` and `+fontsizeinput+` toolbar buttons should not be placed in a xref:toolbar-configuration-options.adoc#toolbar_groups[toolbar group] together or otherwise presented together.
 |`+forecolor+` |Applies foreground/text color to selection.
 |`+h1+` |Changes current line to the "Heading 1" style.
 |`+h2+` |Changes current line to the "Heading 2" style.
