DOC-1892: user-formatting-options.adoc
Added include for `partial/configuration/font_size_input_default_unit.adoc` to `user-formatting-options.adoc`.

--- a/modules/ROOT/pages/user-formatting-options.adoc
+++ b/modules/ROOT/pages/user-formatting-options.adoc
@@ -8,6 +8,8 @@ include::partial$configuration/font_family_formats.adoc[]
 
 include::partial$configuration/font_size_formats.adoc[]
 
+include::partial$configuration/font_size_input_default_unit.adoc[]
+
 include::partial$configuration/line_height_formats.adoc[]
 
 include::partial$configuration/indentation.adoc[]
