--- a/modules/ROOT/partials/configuration/font_size_input_default_unit.adoc
+++ b/modules/ROOT/partials/configuration/font_size_input_default_unit.adoc
@@ -5,7 +5,7 @@ This option sets the default unit of measure for typeface sizes as input in, for
 
 Numbers entered in the `fontsizeinput` toolbar without a qualifying unit of measure will be calculated using the unit of measure set.
 
-This option is commonly used in conjunction with the `fontsizeinput` xref:available-toolbar-buttons.adoc#the-core-toolbar-buttons[toolbar button].
+This option is commonly used in conjunction with the `xref:available-toolbar-buttons.adoc#the-core-toolbar-buttons[fontsizeinput]` toolbar button.
 
 *Type:* `+String+`
 
