DOC-1889: inline-css.adoc
typos in xref references (missing file-name suffixes) corrected.

--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -166,9 +166,9 @@ IMPORTANT: Although the {pluginname} will likely work when an editor running in 
 
 When a {productname} instance is in a shadow root, the {pluginame} should still support
 
-* CSS specified by the `xref:add-css-options#content_css[content_css]` option; and
+* CSS specified by the `xref:add-css-options.adoc#content_css[content_css]` option; and
 
-* CSS specified by the `xref:add-css-options/#content_style[content_style]` option.
+* CSS specified by the `xref:add-css-options.adoc/#content_style[content_style]` option.
 
 
 ==== Classic mode
