DOC-1889: inline-css.adoc
Corrected another typo in an xref reference.

--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -168,7 +168,7 @@ When a {productname} instance is in a shadow root, the {pluginame} should still 
 
 * CSS specified by the `xref:add-css-options.adoc#content_css[content_css]` option; and
 
-* CSS specified by the `xref:add-css-options.adoc/#content_style[content_style]` option.
+* CSS specified by the `xref:add-css-options.adoc#content_style[content_style]` option.
 
 
 ==== Classic mode
