--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -43,7 +43,9 @@ For example:
 +
 [source,html]
 ----
-button:hover { color: blue; }
+button:hover {
+  color: blue;
+}
 ----
 
 . https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements[Pseudo-elements].
