--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -118,7 +118,7 @@ CSS can be specified in inline mode in the following ways:
 
 . the `content_css` option
 +
-Setting the `xref:add-css-options#content_css[content_css]` option automatically creates the `<link>` tag and puts it in the {productname} document’s `<head>`.
+Setting the xref:add-css-options.adoc#content_css[`content_css`] option automatically creates the `<link>` tag and puts it in the {productname} document’s `<head>`.
 +
 NOTE: This is not recommended.
 
